second page background and visual look

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 
-<body class="noScroll test">
+<body class="noScroll ">
   <!--button for testing-->
   <!--
 <a href="#" class="positionHref"></a>
@@ -48,10 +48,19 @@ also cause a white space at bottom because now contributes to the height-->
 <!--wheren section has content it tries to be part of initial view screen-->
 
 
-<section class="page2X0Y1">
+<section class="page2X0Y1 ">
 <!--something i read said use button because comes with lots of good defaults but im struggling with them-->
+<!--want an arrow that underlines text-->
+<div class="pg2Do">
+        What I Can Do
+</div>
+<div class="pCard">
+  Make a card class
+</div>
 
-
+<div class="pg2CanUse">
+What I Can Use
+</div>
 
 </section>
 
