--- a/index.html
+++ b/index.html
@@ -62,10 +62,18 @@ also cause a white space at bottom because now contributes to the height-->
 What I Can Use
 </div>
 
+<div class="case2position ">
+      <div class="handle"></div>
+<div class="case2border ">
+    <div class="case2Inside"></div>
+</div>
+  </div>
+
 </section>
 
 <section class="page1X0Y0">
   <!--<i class="fas fa-sort-up"></i>-->
+
 
 <button class="tab2 invisible">
 
@@ -77,40 +85,19 @@ What I Can Use
 
 
 
-<!-- next page tab  http://lea.verou.me/2013/10/slanted-tabs-with-css-3d-transforms/   -->
-<!-- think i will only use tab page transition once, then will probably
-if do keep using it will want to keep cards and marbles in it
-will want the marble smaller do i do it by adding a class or have the page1 class have something to shrink it
- -->
- <!--
-<button type="page1Tab" name="button">  amazing font up arrow and a marble <img class="myMarble" src="Images\marbles\wellItsAFace.png" alt="My Picture Marble">
-</button>
--->
-  <!--theres no question mark but i dont like the mark-->
-  <!--can remove the spans if not fading-->
-  <!--maybe flash name gold or flash out the other writing, or use it for the transition-->
 
-  <!--currently not shrinking down together tried container fluid
-maybe put text in row and column -->
-  <!--need some way to make it fit the pages so always looks same-->
+
   <section class="businessCard">
 
 
-    <!--I like the grey maybe it should fade in or it should roll in -->
-    <!--or it rolls in the glass is clicked and slides to the corner, the corner
-becomes the corner navbar, as the marble hits the bottom and jumps up
-should happen in 2 second 1 second to bounce and fall and place drink one to fire up
-on firing up the screen should move a little up to indicate you can scroll or use a little tab with a chevron
--->
-<!--invisible-->
-<!--lots issues with animations and transforms on same object overwriting so a div for x axis one for y and the image itself for spin-->
+
+<!--lots issues with animations and transforms on same object overwriting so a
+div for x axis one for y and the image itself for spin-->
 <div class= "myMarbleY">
   <div class="myMarbleX">
     <img class="myMarble rolling invisible" src="Images\marbles\wellItsAFace.png" alt="My Picture Marble">
 </div>
 </div>
-    <!--grab delay appear with the javascript-->
-
 
 
     <div class="buisnessCardText">
@@ -124,38 +111,15 @@ on firing up the screen should move a little up to indicate you can scroll or us
 
 
 
-        <!-- h-100 for row 100% height
- if i want to half col width i could just put all of it in one half size column i think-->
-        <!--when on phone should only have one opetion using @media which is the tea
-shrinking with view port looks wrong because nothing else is shrinking-->
-
-        <!--taken out fluid img from the img classes as im adjusing them anyway-->
-        <!-- need subtle indication they are drinks made a under line fades in left to right under each
-need to tip a little left when hovered over
--->
-
-        <!--trying to avoid inline css with buttons but the class isnt overiding them
-style="background-color: Transparent;"
--->
-        <!--still have issue rows not tight to images because have bottom Workspace
-wrapping button around the column instead of the img means atleast all same size selectable area
-this however has made the column widths the same size
-so instead changed div to button
-<button type="button" name="button">
-<div class="col-md-1 colTight">
-  <img  id="tea" class=" drinkImages" src="Images/tea.png" alt="tea">
-</div>
-</button>
-so this becomes
-<button type="button" name="button" class="col-md-1 colTight">
-  <img  id="tea" class=" drinkImages" src="Images/tea.png" alt="tea">
-</button>
--->
-
-        <!--maybe should of drilled down the hierachy instead of butting the columns as buttons when really images should ahve been-->
 
 
+
+
+
+<!--maybe should of drilled down the hierachy instead of butting the columns as buttons when really images should ahve been-->
 <!--buttons would be better as checkboxes as then when checked can just disable without doing it in js and avoid hover issue-->
+<!--the jquery when it disables does no disable unhovering only hovering so when mouse moves during glass flight its stackpath
+changes to what it would of been if it had not been at an angle because of hover-->
 
         <div class="row drinkChoices">
 
@@ -226,28 +190,11 @@ so this becomes
 
     </h1>
 
-    <!-- Back to top button -->
-    <!--just for testing-->
-    <!--
-    <a id="goUp" class="btnbefore"></a>
--->
-
-    <!--for this section have the drinks reduce to one choice for mobile-->
-    <!--instead of the images maybe use font awesome icon Images-->
-    <!--drinking choice container in the page container coz i want it after the text on same page does this mean the text need to be in a row?-->
-
-
-
-
-
-
-
-
 
 
   </section>
 
-  <!--need to rename drink images coz using it for other stuff-->
+
 
 
       <section id="corner-nav" class="corner-background ">
@@ -283,9 +230,8 @@ so this becomes
 </div>
 
       </section>
-<!-- changed from jquery uncompressed need to look into it and see if slim but not min is better
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
--->
+
+
 <script
   src="https://code.jquery.com/jquery-3.4.0.js"
   integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo="
