working marble case with temporary marbles and blur layering to do next

--- a/index.html
+++ b/index.html
@@ -26,6 +26,49 @@
 
 
 <body class="noScroll ">
+  <!--the marble case works here for now but needs to go in section eventually
+so need either to drill down with css or js depending what is inhibiting it needs a transition
+for opening and closing maybe if opened more than half way continues less than a quater closes
+-->
+  <div class="case2position ">
+
+        <div class="handle"></div>
+  <div class="case2border ">
+
+      <div class="case2Inside">
+        <ul class="myflex-container">
+          <!--
+          <li class="myflex-item"></li>
+          <li class="myflex-item"></li>
+          <li class="myflex-item"></li>
+          <li class="myflex-item"></li>
+          <li class="myflex-item"></li>
+          <li class="myflex-item"></li>
+          <li class="myflex-item"></li>
+          <li class="myflex-item"></li>
+        -->
+        <li ><img class="aMarble " src="Images\marbles\codepen.png" alt="codepen marble"></li>
+        <li ><img class="aMarble " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"></li>
+        <li ><img class="aMarble " src="Images\marbles\Csharp_logo.png" alt="csharp marble"></li>
+        <li ><img class="aMarble " src="Images\marbles\css.png" alt="css marble"></li>
+        <li ><img class="aMarble " src="Images\marbles\ejslandscape.png" alt="ejs marble"></li>
+        <li ><img class="aMarble " src="Images\marbles\git.png" alt="git marble"></li>
+        <li ><img class="aMarble " src="Images\marbles\html.png" alt="html marble"></li>
+        <li ><img class="aMarble " src="Images\marbles\javascript-shield.png" alt="js marble"></li>
+<li ><img class="aMarble " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"></li>
+<li ><img class="aMarble " src="Images\marbles\nodejs.png" alt="nodejs marble"></li>
+<li ><img class="aMarble " src="Images\marbles\unity.png" alt="unity marble"></li>
+
+       </ul>
+
+
+
+
+
+
+      </div>
+  </div>
+    </div>
   <!--button for testing-->
   <!--
 <a href="#" class="positionHref"></a>
@@ -62,12 +105,7 @@ also cause a white space at bottom because now contributes to the height-->
 What I Can Use
 </div>
 
-<div class="case2position ">
-      <div class="handle"></div>
-<div class="case2border ">
-    <div class="case2Inside"></div>
-</div>
-  </div>
+
 
 </section>
 
@@ -230,6 +268,7 @@ changes to what it would of been if it had not been at an angle because of hover
 </div>
 
       </section>
+
 
 
 <script
