arrows position replace image with simpler one which does not distract from text

--- a/index.html
+++ b/index.html
@@ -36,17 +36,9 @@ for opening and closing maybe if opened more than half way continues less than a
   <div class="case2border ">
 
       <div class="case2Inside">
+
         <ul class="myflex-container">
-          <!--
-          <li class="myflex-item"></li>
-          <li class="myflex-item"></li>
-          <li class="myflex-item"></li>
-          <li class="myflex-item"></li>
-          <li class="myflex-item"></li>
-          <li class="myflex-item"></li>
-          <li class="myflex-item"></li>
-          <li class="myflex-item"></li>
-        -->
+
         <li ><img class="aMarble " src="Images\marbles\codepen.png" alt="codepen marble"></li>
         <li ><img class="aMarble " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"></li>
         <li ><img class="aMarble " src="Images\marbles\Csharp_logo.png" alt="csharp marble"></li>
@@ -94,15 +86,16 @@ also cause a white space at bottom because now contributes to the height-->
 <section class="page2X0Y1 ">
 <!--something i read said use button because comes with lots of good defaults but im struggling with them-->
 <!--want an arrow that underlines text-->
-<div class="pg2Do">
-        What I Can Do
-</div>
-<div class="pCard">
-  Make a card class
+<div class="pg2Text higher">What I Can Do
+  <img class = "arrow " src="Images\replaceGeometricArrow.png" alt="arrow left">
 </div>
 
-<div class="pg2CanUse">
-What I Can Use
+
+
+
+<div class="pCard">Make a card class</div>
+
+<div class="pg2Text lower">What I Can Use<img class = "arrow right" src="Images\replaceGeometricArrow.png" alt="arrow right">
 </div>
 
 
