all page working on page 3 shape and table to hold cards then animating into it

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Help Phil Find His Marbles</title>
-
-
   <!-- bootstrap -->
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <title>Help Phil Find His Marbles</title>
+
+
+
 
 
   <link rel="stylesheet" href="CSS/styles.css">
@@ -23,203 +25,348 @@
 
 
 </head>
+<!--put no scroll back in later-->
+<!--class="no Scroll"-->
 
-
-<body class="noScroll ">
+<body>
   <!--the marble case works here for now but needs to go in section eventually
 so need either to drill down with css or js depending what is inhibiting it needs a transition
 for opening and closing maybe if opened more than half way continues less than a quater closes
 -->
-  <div class="case2position ">
 
-        <div class="handle"></div>
-  <div class="case2border ">
 
-      <div class="case2Inside">
-
-        <ul class="myflex-container">
-
-        <li ><img class="aMarble " src="Images\marbles\codepen.png" alt="codepen marble"></li>
-        <li ><img class="aMarble " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"></li>
-        <li ><img class="aMarble " src="Images\marbles\Csharp_logo.png" alt="csharp marble"></li>
-        <li ><img class="aMarble " src="Images\marbles\css.png" alt="css marble"></li>
-        <li ><img class="aMarble " src="Images\marbles\ejslandscape.png" alt="ejs marble"></li>
-        <li ><img class="aMarble " src="Images\marbles\git.png" alt="git marble"></li>
-        <li ><img class="aMarble " src="Images\marbles\html.png" alt="html marble"></li>
-        <li ><img class="aMarble " src="Images\marbles\javascript-shield.png" alt="js marble"></li>
-<li ><img class="aMarble " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"></li>
-<li ><img class="aMarble " src="Images\marbles\nodejs.png" alt="nodejs marble"></li>
-<li ><img class="aMarble " src="Images\marbles\unity.png" alt="unity marble"></li>
-
-       </ul>
+  <!--need invisible then remove. latter have it slide into view on pg2-->
 
 
 
-
-
-
-      </div>
-  </div>
-    </div>
   <!--button for testing-->
   <!--
 <a href="#" class="positionHref"></a>
 -->
-<!--
+  <!--
 <body class="noScroll">
 -->
-<!--pages are the full view port X and Y are the coordinates so if had a T
+  <!--pages are the full view port X and Y are the coordinates so if had a T
 made of 3 screens in width and 3 screens in height
 the middles of the top of T may be X2Y3-->
 
-<!--think i need like a look here function and it put you in the area of the class-->
-<!--the marble divs are relative so that they stay on the first page but, this means
+  <!--think i need like a look here function and it put you in the area of the class-->
+  <!--the marble divs are relative so that they stay on the first page but, this means
 when they move to move the marble they push the top page, either the top pages
 should be absolute as well or the start location of the marble is done with different
 units or contained in something relative that isnt moved should re read and watch on positioning
 now i have more context
 maybe making it inline but not sure thats really the issues
 also cause a white space at bottom because now contributes to the height-->
-<!--wheren section has content it tries to be part of initial view screen-->
+  <!--wheren section has content it tries to be part of initial view screen-->
 
 
-<section class="page2X0Y1 ">
-<!--something i read said use button because comes with lots of good defaults but im struggling with them-->
-<!--want an arrow that underlines text-->
-<div class="pg2Text higher">What I Can Do
-  <img class = "arrow " src="Images\replaceGeometricArrow.png" alt="arrow left">
+  <section class="page2X0Y1 ">
+    <!--something i read said use button because comes with lots of good defaults but im struggling with them-->
+    <!--want an arrow that underlines text-->
+
+    <div class="case2position">
+
+      <div class="handle"></div>
+      <div class="case2border ">
+
+
+        <!--if i child the felx container it will receive the blur so need to seperate out elements
+      make one absolute
+      I want blur to affect the shine on the glass but not the Marbles
+      I want the shine on the marbles throughso they just need to be behind
+      -->
+
+
+
+        <ul class="myflex-container">
+
+          <li><img class="aMarble " src="Images\marbles\codepen.png" alt="codepen marble"></li>
+          <li><img class="aMarble " src="Images\marbles\atom-4-logo-png-transparent.png" alt="atom marble"></li>
+          <li><img class="aMarble " src="Images\marbles\Csharp_logo.png" alt="csharp marble"></li>
+          <li><img class="aMarble " src="Images\marbles\css.png" alt="css marble"></li>
+          <li><img class="aMarble " src="Images\marbles\ejslandscape.png" alt="ejs marble"></li>
+          <li><img class="aMarble " src="Images\marbles\git.png" alt="git marble"></li>
+          <li><img class="aMarble " src="Images\marbles\html.png" alt="html marble"></li>
+          <li><img class="aMarble " src="Images\marbles\javascript-shield.png" alt="js marble"></li>
+          <li><img class="aMarble " src="Images\marbles\mongooselogo.jpg" alt="mongoose marble"></li>
+          <li><img class="aMarble " src="Images\marbles\nodejs.png" alt="nodejs marble"></li>
+          <li><img class="aMarble " src="Images\marbles\unity.png" alt="unity marble"></li>
+
+        </ul>
+
+        <div class="glassEffect"></div>
+
+
+
+
+      </div>
+    </div>
+
+
+
+
+    <div class="pg2Text higher">What I Can Do
+      <img class="arrow " src="Images\replaceGeometricArrow.png" alt="arrow left">
+    </div>
+
+
+
+    <!--how do i make a card follow the background gradient end black line
+and how make marble go to location
+giving it vh vw does not help however psx0y1 lower text box mostly keep its distance
+so maybe an angled containing div
+maybe even ajoining a space for the marble
+-->
+    <div class="pg2CardLocation">
+      <div class="pCard">Make a card class</div>
+      <div class="containerToReceiveMyMarblePG2"></div>
+    </div>
+
+
+    <div class="pg2Text lower">What I Can Use<img class="arrow right" src="Images\replaceGeometricArrow.png" alt="arrow right">
+    </div>
+
+
+
+  </section>
+
+  <section class="page1X0Y0">
+    <!--<i class="fas fa-sort-up"></i>-->
+
+
+    <button class="tab2 invisible">
+
+      <i class="fas fa-caret-up"></i>
+      <img class="myMarbleImg " src="Images\marbles\wellItsAFace.png" alt="My Picture Marble tab">
+
+    </button>
+
+
+
+
+
+
+    <section class="businessCard">
+
+
+
+      <!--lots issues with animations and transforms on same object overwriting so a
+div for x axis one for y and the image itself for spin-->
+      <div class="myMarble">
+
+
+        <div class="myMarbleY">
+          <div class="myMarbleX">
+            <img class="myMarbleImg rollingClockwise invisible" src="Images\marbles\wellItsAFace.png" alt="My Picture Marble">
+          </div>
+        </div>
+      </div>
+
+
+      <div class="buisnessCardText">
+
+
+        <h1>
+          <span class=delayAppear>Hi I'm </span>Phil Tate<span class=delayAppear> a programmer <br>
+            & full stack developer <br>
+            <span class=fontOrnaments delayAppear>o </span><span class="h1Subtitle"> fancy a drink </span><span class=fontOrnaments> p</span>
+          </span>
+
+
+
+
+
+
+
+
+          <!--maybe should of drilled down the hierachy instead of butting the columns as buttons when really images should ahve been-->
+          <!--buttons would be better as checkboxes as then when checked can just disable without doing it in js and avoid hover issue-->
+          <!--the jquery when it disables does no disable unhovering only hovering so when mouse moves during glass flight its stackpath
+changes to what it would of been if it had not been at an angle because of hover-->
+
+          <div class="row drinkChoices">
+
+
+            <button type="button" name="button" class="drinkButton col-md-1 colTight">
+
+              <img id="cocktailOlive" class=" drinkImages" src="Images/cocktailOlive.png" alt="cocktail">
+
+
+            </button>
+
+            <button type="button" name="button" class="drinkButton col-md-1 colTight">
+
+              <img id="cocktailStraw" class="drinkImages" src="Images/cocktailStraw.png" alt="cocktail">
+
+
+            </button>
+
+            <button type="button" name="button" class="drinkButton col-md-1 colTight">
+
+              <img id="tea" class=" drinkImages" src="Images/tea.png" alt="tea">
+
+
+            </button>
+
+            <button type="button" name="button" class="drinkButton col-md-1 colTight ">
+
+              <img id="martini" class=" drinkImages" src="Images/martiniGlass.png" alt="martini">
+
+
+            </button>
+          </div>
+
+          <div class="row drinkChoices">
+
+            <button type="button" name="button" class="drinkButton col-md-1 colTight">
+              <img id="shotGlass" class=" drinkImages" src="Images/shotGlass.png" alt="shot glass">
+
+
+            </button>
+
+            <button type="button" name="button" class="drinkButton col-md-1 colTight">
+
+              <img class=" drinkImages" src="Images/waterGlass.png" alt="water glass" id="waterGlass">
+
+
+            </button>
+
+            <button type="button" name="button" class="drinkButton col-md-1 colTight">
+
+              <img id="wineGlass" class=" drinkImages" src="Images/wineGlass.png" alt="wine glass">
+
+
+            </button>
+
+            <button type="button" name="button" class="drinkButton col-md-1 colTight">
+
+              <img id="wineGlassSimple" class=" drinkImages" src="Images/wineGlassSimple.png" alt="wine glass">
+
+
+            </button>
+          </div>
+        </h1>
+
+      </div>
+
+
+
+
+
+
+
+
+
+
+    </section>
+  </section>
+<!--all the pushes and pulls and centering worked in bootstrap sandstone on codepen, changed the bootstrap when
+found didnt work here and didnt work on both
+in 4.3.1 need use order and offset
+-->
+<section  class="page3">
+
+  <!--rows supposed to be in container dont know how to do this-->
+
+  <div class="bestCardsArea">
+     <div class="shape2">
+       <div class="container-fluid bestCardsContainer text-center">
+       <!--container needs to be centered and contents-->
+       <!--order effects order they collapse to no more useful that actually putting them in that order think would be more useful for grabbing with jq-->
+       <!--should order for mobile then push and pull for desktop-->
+
+
+ <div class="row ">
+   <!--centered by pushing probably not the best way-->
+     <div class="col-sm-8 offset-sm-2 ">
+
+      <div class="alert alert-warning ">
+        <div class="magnifier">
+       Magnifier
+          </div>
+      </div>
+    </div>
+   </div>
+  <div class="row">
+
+
+    <div class="col-md-12 col-lg-4  order-1 order-lg-2">
+      <div class="alert alert-warning">
+        <div class="card">
+               important card
+          </div>
+
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-4  order-2 order-lg-1">
+      <div class="alert alert-info ">
+         <div class="card">
+               left card
+          </div>
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-md-6 col-lg-4  order-3 order-lg-3 ">
+      <div class="alert alert-danger ">
+      <div class="card">
+               right card
+          </div>
+      </div>
+    </div>
+
+
+
+  </div>
+
+
+ </div>
+
 </div>
-
-
-
-
-<div class="pCard">Make a card class</div>
-
-<div class="pg2Text lower">What I Can Use<img class = "arrow right" src="Images\replaceGeometricArrow.png" alt="arrow right">
 </div>
 
 
 
 </section>
 
-<section class="page1X0Y0">
-  <!--<i class="fas fa-sort-up"></i>-->
 
 
-<button class="tab2 invisible">
-
-  <i class="fas fa-caret-up"></i>
-  <img class="myMarble " src="Images\marbles\wellItsAFace.png" alt="My Picture Marble tab">
-
-</button>
+  <section id="corner-nav" class="corner-background ">
 
 
 
 
 
-
-  <section class="businessCard">
-
-
-
-<!--lots issues with animations and transforms on same object overwriting so a
-div for x axis one for y and the image itself for spin-->
-<div class= "myMarbleY">
-  <div class="myMarbleX">
-    <img class="myMarble rolling invisible" src="Images\marbles\wellItsAFace.png" alt="My Picture Marble">
-</div>
-</div>
-
-
-    <div class="buisnessCardText">
-
-
-      <h1>
-        <span class=delayAppear>Hi I'm </span>Phil Tate<span class=delayAppear> a programmer <br>
-          & full stack developer <br>
-          <span class=fontOrnaments delayAppear>o </span><span class="h1Subtitle"> fancy a drink </span><span class=fontOrnaments> p</span>
-        </span>
+    <div class="corner-table">
 
 
 
+      <div class="row">
+        <div class="col-sm-4">
+          <i class="fas fa-expand-arrows-alt corner-links"></i>
+        </div>
+        <div class="col-sm-4">
+          <i class="far fa-envelope corner-links"></i>
+        </div>
+        <div class="col-sm-4">
+          <!--later will change source to the image they picked-->
 
-
-
-
-
-<!--maybe should of drilled down the hierachy instead of butting the columns as buttons when really images should ahve been-->
-<!--buttons would be better as checkboxes as then when checked can just disable without doing it in js and avoid hover issue-->
-<!--the jquery when it disables does no disable unhovering only hovering so when mouse moves during glass flight its stackpath
-changes to what it would of been if it had not been at an angle because of hover-->
-
-        <div class="row drinkChoices">
-
-
-          <button type="button" name="button" class="drinkButton col-md-1 colTight">
-
-            <img id="cocktailOlive" class=" drinkImages" src="Images/cocktailOlive.png" alt="cocktail">
-
-
-          </button>
-
-          <button type="button" name="button" class="drinkButton col-md-1 colTight">
-
-            <img id="cocktailStraw" class="drinkImages" src="Images/cocktailStraw.png" alt="cocktail">
-
-
-          </button>
-
-          <button type="button" name="button" class="drinkButton col-md-1 colTight">
-
-            <img id="tea" class=" drinkImages" src="Images/tea.png" alt="tea">
-
-
-          </button>
-
-          <button type="button" name="button" class="drinkButton col-md-1 colTight ">
-
-            <img id="martini" class=" drinkImages" src="Images/martiniGlass.png" alt="martini">
-
-
-          </button>
+          <img id="chosen-beverage" class="corner-links " src="Images/tea.png" alt="tea">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12">
+          <h1><i class="fas fa-file-download "></i></h1>
         </div>
 
-        <div class="row drinkChoices">
-
-          <button type="button" name="button" class="drinkButton col-md-1 colTight">
-            <img id="shotGlass" class=" drinkImages" src="Images/shotGlass.png" alt="shot glass">
-
-
-          </button>
-
-          <button type="button" name="button" class="drinkButton col-md-1 colTight">
-
-            <img class=" drinkImages" src="Images/waterGlass.png" alt="water glass" id="waterGlass">
-
-
-          </button>
-
-          <button type="button" name="button" class="drinkButton col-md-1 colTight">
-
-            <img id="wineGlass" class=" drinkImages" src="Images/wineGlass.png" alt="wine glass">
-
-
-          </button>
-
-          <button type="button" name="button" class="drinkButton col-md-1 colTight">
-
-            <img id="wineGlassSimple" class=" drinkImages" src="Images/wineGlassSimple.png" alt="wine glass">
-
-
-          </button>
-        </div>
+      </div>
 
     </div>
 
 
 
 
-    </h1>
 
 
 
@@ -228,57 +375,11 @@ changes to what it would of been if it had not been at an angle because of hover
 
 
 
-      <section id="corner-nav" class="corner-background ">
 
-
-
-
-
-<div class="corner-table">
-
-
-
-        <div class="row">
-          <div class="col-sm-4">
-            <i class="fas fa-expand-arrows-alt corner-links"></i>
-          </div>
-          <div class="col-sm-4">
-            <i class="far fa-envelope corner-links"></i>
-          </div>
-          <div class="col-sm-4">
-            <!--later will change source to the image they picked-->
-
-            <img id="chosen-beverage" class="corner-links " src="Images/tea.png" alt="tea">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-12">
-            <h1><i class="fas fa-file-download "></i></h1>
-          </div>
-
-        </div>
-
-</div>
-
-      </section>
-
-
-
-<script
-  src="https://code.jquery.com/jquery-3.4.0.js"
-  integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo="
-  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-
-  <script src="index.js" charset="utf-8"></script>
-</section>
-
-
-
-
-
+<script src="index.js" charset="utf-8"></script>
 
 
 </body>
