checking up to date

--- a/index.html
+++ b/index.html
@@ -269,8 +269,36 @@ in 4.3.1 need use order and offset
 
   <!--rows supposed to be in container dont know how to do this-->
 
+
+  <div class="marbleOnShape1">
+    <div class="marbleOnShape1Y">
+      <div class="marbleOnShape1X">
+        <img class="aMarble " src="Images\marbles\nodejs.png" alt="nodejs marble">
+      </div>
+    </div>
+  </div>
+
+  <div class="marbleOnShape2">
+    <div class="marbleOnShape2Y">
+      <div class="marbleOnShape2X">
+        <img class="aMarble " src="Images\marbles\Csharp_logo.png" alt="csharp marble">
+      </div>
+    </div>
+  </div>
+
+  <div class="marbleOnShape3">
+    <div class="marbleOnShape3Y">
+      <div class="marbleOnShape3X">
+        <img class="aMarble " src="Images\marbles\unity.png" alt="unity marble">
+      </div>
+    </div>
+  </div>
+
   <div class="bestCardsArea">
      <div class="shape2">
+       <div class="pg3ShapeTxtTop">
+      <h1>   My Favourite Projects </h1>
+       </div>
        <div class="container-fluid bestCardsContainer text-center">
        <!--container needs to be centered and contents-->
        <!--order effects order they collapse to no more useful that actually putting them in that order think would be more useful for grabbing with jq-->
@@ -322,7 +350,13 @@ in 4.3.1 need use order and offset
 
 
  </div>
+       <div class="pg3ShapeTxtBottom"><h1>
 
+<!--
+http://xahlee.info/comp/unicode_arrows.html
+-->
+<!--dont like the arrow when get proper ones for pg2 use that-->
+         See the whole deck → </h1></div>
 </div>
 </div>
 
