got ribbon working but there is some redundant spacer somewhere

--- a/just to compare/Htmlpg4.html
+++ b/just to compare/Htmlpg4.html
@@ -1,16 +1,16 @@
 
 
 var cardHtml1 = " <div class='scaleable-wrapper'> <div class='aCard'>    <div class='topRightRibbonArea'> <div class='topRightProjectTechnologiesArea'> ";
-var cardHtml2 = " <form class='formTechBtn' action='/carousel' method='get'> <button class='submitButtonNoStyle' type='submit' name='techButton' value= ";
-var cardHtml3 = " ><img type='image' class='cardTechlinksImg' src= ";
-var cardHtml4 = " alt='gitLink'>  </button>  </form> "
+var cardHtml2 = " <form class='formTechBtn' action='/carousel' method='get'> <button class='submitButtonNoStyle' type='submit' name='techButton' value= "; /*make sure value given single speach marks */
+var cardHtml3 = " ><img type='image' class='cardTechlinksImg' src= "; /*make sure gets two single marks*/
+var cardHtml4 = " alt='gitLink'></img>  </button>  </form> "
 var cardHtml4Endloop = "  </div> <div class='ribbonEnd'> </div>  </div> <div class='aCardWritingArea'> <div class='projectTitle'> ";
-var cardHtml5 = " </div> <img class='projectImage ' src= ";
-var cardHtml6 = " alt='projectImg'>  <div class='projectDescriptionSubtitle'>Description</div>  <div class='projectDescriptionText'> ";
+var cardHtml5 = " </div> <img class='projectImage ' src= ";   /* make sure gets double '' */
+var cardHtml6 = " alt='projectImg'></img>  <div class='projectDescriptionSubtitle'>Description</div>  <div class='projectDescriptionText'> ";
 var cardHtml7 = " </div> </div> <div class='cardHyperlinksArea'> ";
-var cardHtml8 =  " <a href= ";
- var cardHtml9 =  " ><Img class='cardHyperlinksImg' src= ";
- var cardHtml10 = " alt='gitLink'> </a> ";
+var cardHtml8 =  " <a href= "; /* marks needed '' */
+ var cardHtml9 =  " ><img class='cardHyperlinksImg' src= "; /* marks needed */
+ var cardHtml10 = " alt='gitLink'></img> </a> ";
  var cardHtml11 = " </div></div></div> ";
 
 
@@ -63,3 +63,63 @@ linksArrayHtml+
 
 
     /*  /////////////////////////////    for comparison     ////////////////////////////////////////////////  */
+
+    var cardHtml1 = " <div class='scaleable-wrapper'> <div class='aCard'>    <div class='topRightRibbonArea'> <div class='topRightProjectTechnologiesArea'> ";
+    var cardHtml2 = " <form class='formTechBtn' action='/carousel' method='get'> <button class='submitButtonNoStyle' type='submit' name='techButton' value= ";
+    var cardHtml3 = " ><img type='image' class='cardTechlinksImg' src= ";
+    var cardHtml4 = " alt='gitLink'>  </button>  </form> "
+    var cardHtml4Endloop = "  </div> <div class='ribbonEnd'> </div>  </div> <div class='aCardWritingArea'> <div class='projectTitle'> ";
+    var cardHtml5 = " </div> <img class='projectImage ' src= ";
+    var cardHtml6 = " alt='projectImg'>  <div class='projectDescriptionSubtitle'>Description</div>  <div class='projectDescriptionText'> ";
+    var cardHtml7 = " </div> </div> <div class='cardHyperlinksArea'> ";
+    var cardHtml8 =  " <a href= ";
+     var cardHtml9 =  " ><Img class='cardHyperlinksImg' src= ";
+     var cardHtml10 = " alt='gitLink'> </a> ";
+     var cardHtml11 = " </div></div></div> ";
+
+
+
+
+      while (cardsStillToBePlaced) {
+
+        x = (steps % numCols) * cardWidth + inset;
+        y = blackLineGrad * (x + measureFromCardCenter) + blackLineC + cardHeight * Math.floor(steps / numCols); //but some cards wont be placed
+    //this is so when we run out of project cards we just start again at the begginging
+    arrayLoopInt = ((cardsPlaced)%projectCards.length);//not certanin will place whole loop// ((cardsPlaced-1)%projectCards.length)+1; //ones so modulus doesnt end on zero before steps incremented as want to start at zerosa
+    //alert(cardsPlaced + "<--cardsPlaced" + projectCards.length + "  <--length  " + "array loop int -->"+arrayLoopInt);
+        steps++;
+        if (y < H) {
+          cardsConsecutivelyNotPlaced = 0;
+        cardsPlaced++; //put this where aCardHtml is to get the numbers
+        // htmlString+= cardHtml;
+    techArrayHtml="";
+    linksArrayHtml="";
+    console.log(" arrayLoopInt " +arrayLoopInt +" cardsPlaced " + cardsPlaced + " projectCards.length " + projectCards.length);
+        for(var j=0; j<projectCards[arrayLoopInt].technologiesArray.length; j++ ){
+              techArrayHtml += cardHtml2 + projectCards[arrayLoopInt].technologiesArray[j].technologyName +
+              cardHtml3+projectCards[arrayLoopInt].technologiesArray[j].technologyImagePath+cardHtml4;}
+
+        for(var k=0; k<projectCards[arrayLoopInt].linksArray.length; k++){
+                  linksArrayHtml +=  cardHtml8+projectCards[arrayLoopInt].linksArray[k].linkHyperlink+cardHtml9+projectCards[arrayLoopInt].linksArray[k].linkImagePath+cardHtml10;
+              }
+          htmlString += "<div class=' cardPG4 ' style='top:" + y + "px;left:" + x + "px;'> " +   cardHtml1+
+
+    //start technologies array loop
+
+    //end technologies array loop
+    techArrayHtml+
+          cardHtml4Endloop + projectCards[arrayLoopInt].projectName + cardHtml5 +projectCards[arrayLoopInt].projectImagePath+
+          cardHtml6 +projectCards[arrayLoopInt].projectDescription+cardHtml7+
+    //start links loop
+
+    //end links loop
+    linksArrayHtml+
+          cardHtml11+" </div> ";
+        } else {
+          cardsConsecutivelyNotPlaced++;
+          if (cardsConsecutivelyNotPlaced > numCols) {
+            cardsStillToBePlaced = false;
+            htmlString = "<div class='pg4Text'>Phil Tate</div>" + htmlString;
+            $(".page4X0Y0").html(htmlString);
+          }
+        }
