making ribbon shadows

--- a/just to compare/htmlEJS.html
+++ b/just to compare/htmlEJS.html
@@ -1,7 +1,7 @@
 <div class="scaleable-wrapper" >
 <div class="aCard">
 <div class="topRightRibbonArea">
-<div class="topRightProjectTechnologiesArea">
+<div class="topRightProjectTechnologiesArea"><div class ="ribbonLoopShadowSpacer"></div>
 <form class="formTechBtn" action="/carousel" method="get">
 <button class="submitButtonNoStyle" type="submit" name="techButton" value=<%= page3SecondBestCard.technologiesArray[i].technologyName %> >
 <img type="image" class="cardTechlinksImg" src= <%=page3SecondBestCard.technologiesArray[i].technologyImagePath %> alt="gitLink">
